Changelog
=========

0.3 (xxxx-xx-xx)
----------------

* Updated RECOIL to 5.0.0 (Piotr Fusik)


0.2 (2016-07-20)
----------------

* Updated RECOIL to 3.4.0


0.1.1 (2015-02-22)
------------------

* Initial release